--- a/style.css
+++ b/style.css
@@ -41,6 +41,13 @@ img{
 .btn:hover{
     background-color:blueviolet;
 }
+
+.flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 /* common style start here */
 
 /*menu Icon*/
@@ -123,7 +130,9 @@ nav{
 }
 .hidden{
     display: none;
-
+}
+.header{
+    height: 100vh;
 }
 
 }
@@ -134,6 +143,89 @@ nav{
     
 }
 /* Navbar Ends here */
+
+/* Header Start here */
+.header{
+    padding: 4rem;
+    height: 80vh;
+    background:url(./Immage/background.avif);
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.banner {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  
+}
+.banner__box{
+    width: 100%;
+}
+
+.banner__title{
+    font-size:4rem;
+    color:yellow;
+    padding: 0.5rem;
+    border-radius: var(--border-radious);
+}
+
+.features{
+    width: 100%;
+    cursor: pointer;
+}
+
+.feature{
+    background-color:var(---primary-color);
+    color: white;
+    border-radius: var(--border-radious);
+    padding: 1rem;
+    width: 15rem;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.fature__icon{
+    font-size: 3rem;
+}
+/* Header Ends here */
+
+/* Main Start here */
+main{
+    padding: 4rem;
+    min-height: 80vh;
+}
+
+.sidebar{
+    flex: 1;
+    padding: var(--padding);
+    border-radius: var(--border-radious);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:1rem;
+    align-self: flex-start;
+}
+.main-content{
+    flex: 3;
+}
+
+.action__ select{
+    padding: 0.3rem; 
+
+}
+/* Main Ends here */
+.action-search input{
+    padding: 0.4rem;
+    width: 15rem;
+}
+
+.action-search .btn{
+    margin: -0.4rem;
+    padding: 0.5rem;
+    border: 1px solid;
+}
+
 
 /*Footer Start Here*/
 .footer{
